# txt-vst

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: IncantBundleModel.cmake
models/: README.md
src/: LLMEngine.cpp  LLMEngine.h  ParameterSchema.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
src/effects/: Chorus.cpp  Chorus.h  Compressor.cpp  Compressor.h  Delay.cpp  Delay.h  Distortion.cpp  Distortion.h  EffectBase.h  Equalizer.cpp  Equalizer.h  Filter.cpp  Filter.h  Glitch.cpp  Glitch.h  Overdrive.cpp  Overdrive.h  Phaser.cpp  Phaser.h  Reverb.cpp  Reverb.h  Tremolo.cpp  Tremolo.h
